--- a/service-tellstick-switch/package.json
+++ b/service-tellstick-switch/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "zmq": "^2.8.0",
-    "zonar": "^0.5.9"
+    "zonar": "^0.5.9",
+    "tellstickjs": "^0.2.1",
+    "moment": "^2.8.3"
   }
 }
