--- a/service-plugwise/package.json
+++ b/service-plugwise/package.json
@@ -12,6 +12,8 @@
     "pushbullet": "^1.3.0",
     "zmq": "^2.8.0",
     "zonar": "^0.5.9",
+    "plugwisejs": "^0.5.2",
+    "crc": "^3.0.0",
     "async": "^0.9.0"
   }
 }
