--- a/service-plugwise/package.json
+++ b/service-plugwise/package.json
@@ -14,6 +14,7 @@
     "zonar": "^0.5.9",
     "plugwisejs": "^0.5.2",
     "crc": "^3.0.0",
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "moment": "^2.8.3"
   }
 }
